# 3BodyMonteCarlo

./: .gitignore  CMakeLists.txt  main.cpp
Implementations/: Body.h  Palette.h  SlimeMoldGL.cpp  SlimeMoldGL.h  ThreeBodyGL.cpp  ThreeBodyGL.h  UIWrapper.cpp  UIWrapper.h
Shaders/: pheromoneEvaporation.comp  slimeMold.comp  threeBody.comp  threeBody.frag  trailEvaporation.comp
Utils/: Random.cpp  Random.h
